2008-03-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed Bug 363951 - Numeric keyboard
	  does not work

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Possible fix: 'Bug 368597 - Wrong
	  location of caret in the new managed editor'.

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed Bug 370133 - When jumping to a
	  line, caret should be placed in the middle of the window

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed Bug 370135
	  - XML comment highlighting not working

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* ValaSyntaxMode.xml: Added vala syntax mode from levi bard.

2008-03-12  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Implement AutoIndent
	  behaviour.

2008-03-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Added some thread locks for the update logic.

2008-03-05  Michael Hutchinson <mhutchinson@novell.com> 

	* XmlSyntaxMode.xml: Apply XML highlighting to XAML , HTML and XHTML.

2008-03-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Improved the scrolling speed (should be
	  visible on old machines).

2008-03-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Window split now removes the split that
	  doesn't have the focus. (intelligent split)

2008-03-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/BookmarkMargin.cs: Clicking on the bookmark margin on an
	  invalid line no longer triggers the bookmark in the last line.

2008-03-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, AspNetSyntaxMode.xml, Makefile.am: Started ASP.NET
	  highlighting.

2008-03-03  Mike Krüger <mkrueger@novell.com> 
